--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,11 @@ plugins {
     id 'com.android.application' version '8.0.2' apply false
     id 'com.android.library' version '8.0.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id("com.google.gms.google-services") version "4.4.0" apply false
 }
 
 ext {
     navVersion = '2.5.3'
     glideVersion = '4.11.0'
+    retrofitVersion = "2.9.0"
 }
