--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.6.1"
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation "androidx.recyclerview:recyclerview:1.3.2"
 
     //Firebase
     implementation platform("com.google.firebase:firebase-bom:32.5.0")
